; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/um/os-Linux/extr_main.c___wrap_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/um/os-Linux/extr_main.c___wrap_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@uml_physmem = common dso_local global i64 0, align 8
@high_physmem = common dso_local global i64 0, align 8
@kmalloc_ok = common dso_local global i64 0, align 8
@start_vm = common dso_local global i64 0, align 8
@end_vm = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__wrap_free(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = ptrtoint i8* %4 to i64
  store i64 %5, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = load i64, i64* @uml_physmem, align 8
  %8 = icmp uge i64 %6, %7
  br i1 %8, label %9, label %20

9:                                                ; preds = %1
  %10 = load i64, i64* %3, align 8
  %11 = load i64, i64* @high_physmem, align 8
  %12 = icmp ult i64 %10, %11
  br i1 %12, label %13, label %20

13:                                               ; preds = %9
  %14 = load i64, i64* @kmalloc_ok, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %13
  %17 = load i8*, i8** %2, align 8
  %18 = call i32 @kfree(i8* %17)
  br label %19

19:                                               ; preds = %16, %13
  br label %39

20:                                               ; preds = %9, %1
  %21 = load i64, i64* %3, align 8
  %22 = load i64, i64* @start_vm, align 8
  %23 = icmp uge i64 %21, %22
  br i1 %23, label %24, label %35

24:                                               ; preds = %20
  %25 = load i64, i64* %3, align 8
  %26 = load i64, i64* @end_vm, align 8
  %27 = icmp ult i64 %25, %26
  br i1 %27, label %28, label %35

28:                                               ; preds = %24
  %29 = load i64, i64* @kmalloc_ok, align 8
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %34

31:                                               ; preds = %28
  %32 = load i8*, i8** %2, align 8
  %33 = call i32 @vfree(i8* %32)
  br label %34

34:                                               ; preds = %31, %28
  br label %38

35:                                               ; preds = %24, %20
  %36 = load i8*, i8** %2, align 8
  %37 = call i32 @__real_free(i8* %36)
  br label %38

38:                                               ; preds = %35, %34
  br label %39

39:                                               ; preds = %38, %19
  ret void
}

declare dso_local i32 @kfree(i8*) #1

declare dso_local i32 @vfree(i8*) #1

declare dso_local i32 @__real_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
